shopping-app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-app
  #namespace: shopping-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shopping
  template:
    metadata:
      labels:
        app: shopping
    spec:
      containers:
        - name: shopping
          image: rarestomuta/shopping-app:b74b6548550a71006d040078fd69f648dd45c5ff
         # resources:
           #requests:
           # cpu: "200m"
          #  memory: "256Mi"
         # limits:
           # cpu: "500m"
           # memory: "512Mi"

          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20
