mysql-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: mysql
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
