shopping-app-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shopping-app
  #namespace: shopping-app
spec:
  type: ClusterIP
  selector:
    app: shopping
  ports:
    - port: 80
      targetPort: 8000
