shopping-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shopping
  template:
    metadata:
      labels:
        app: shopping
    spec:
      containers:
        - name: shopping
          image: rarestomuta/shopping-app:1.0
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: shopping-app
spec:
  type: ClusterIP
  selector:
    app: shopping
  ports:
    - port: 80
      targetPort: 8000
