shopping-app-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopping-ingress
  #namespace: shopping-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: shopping.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shopping-app
                port:
                  number: 80
